# ece30861-team15

./: README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run  setup.py  test_gen_ai_client_clean.py  test_urls.txt  testing.txt  urls.txt
.github/workflows/: ci.yml
src/: main.py
src/api/: GitClient.py  HuggingFaceClient.py  gen_ai_client.py  git_client.py  hugging_face_client.py  performance_claims_ai_prompt.txt  performance_claims_conversion_prompt.txt  performance_claims_system_prompt.txt  performance_claims_user_prompt.txt  readme_clarity_ai_prompt.txt  readme_clarity_system_prompt.txt  readme_clarity_user_prompt.txt
src/metric_inputs/: dataset_stats.py
src/metrics/: bus_factor_metric.py  code_quality_metric.py  dataset_code_metric.py  dataset_quality_metric.py  license_metric.py  local_metrics.py  metric.py  metrics_calculator.py  performance_claims_metric.py  ramp_up_time_metric.py  size_metric.py
tests/: test_main.py  test_parallelism.py
tests/api/: test_gen_ai_client.py  test_git_client.py  test_git_client_coverage.py
tests/metrics/: test_bus_factor_metric.py  test_code_quality_metric.py  test_dataset_code_metric.py  test_dataset_quality_metric.py  test_license_metric.py  test_local_metrics.py  test_metric.py  test_metrics_calculator.py  test_performance_claims_metric.py  test_ramp_up_time_metric.py  test_size_metric.py
tests/models/: test_get_dataset_info.py
