[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ece30861-team15"
version = "0.1.0"
description = "Git repository analysis tool"
requires-python = ">=3.8"
dependencies = [
    "gitpython",
    "requests", 
    "huggingface-hub",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

